RavenDB-15723 Connection strings view title visibility fix

--- a/src/Raven.Studio/wwwroot/Content/css/styles-common.less
+++ b/src/Raven.Studio/wwwroot/Content/css/styles-common.less
@@ -388,6 +388,7 @@ a {
 .text-elipsis {
     overflow: hidden;
     text-overflow: ellipsis;
+    padding: 1px 0;
 }
 
 .text-capitalize {
